# dotfiles

./: alacritty.yml  user-dirs.dirs
emacs/: init.el  readme.org  setup-export.org
kitty/: kitty.conf
mail/: README.org  mbsyncrc  msmtprc
templates/: CMakeLists.txt  README.org
x11/: xinitrc
zsh/: .zprofile  config.sh
